# airbyte-agent-connectors

./: .env.example  .gitignore  CODE_OPTIMIZATION_GUIDE.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: airbyte-agent-connectors
.github/workflows/: ai-triage.yml  generate-skills.yml  issue-slash-commands.yml  publish-mcp.yml  publish.yml
airbyte-agent-connectors/: README.md  SKILL.md
airbyte-agent-connectors/references/: authentication.md  getting-started.md  oss-setup.md  platform-setup.md  programmatic-setup.md
airbyte-agent-mcp/: .env.example  CHANGELOG.md  README.md  configured_connectors.yaml.example  connector-oilpriceapi-local.yaml  connector-reddit-finance-local.yaml  pyproject.toml  trading-bot-connectors.yaml
airbyte-agent-mcp/airbyte_agent_mcp/: agent.py  airbyte_api.py  connector_utils.py  constants.py  installer.py  mcp_server.py  models.py  shell_utils.py  terminal_chat.py
airbyte-agent-mcp/airbyte_agent_mcp/_vendored/connector_sdk/: config_loader.py
airbyte-agent-mcp/airbyte_agent_mcp/_vendored/connector_sdk/executor/: local_executor.py
airbyte-agent-mcp/airbyte_agent_mcp/_vendored/connector_sdk/schema/: base.py
airbyte-agent-mcp/airbyte_agent_mcp/cli/: __init__.py  __main__.py  chat_commands.py  cloud_commands.py  connector_commands.py  helpers.py  login_commands.py  mcp_commands.py  org_commands.py  register_commands.py
airbyte-agent-mcp/airbyte_agent_mcp/models/: __init__.py  cli_config.py  connector_config.py
airbyte-agent-mcp/tests/: conftest.py  test_agent.py  test_airbyte_api.py  test_chat_commands.py  test_cli_config.py  test_cloud_commands.py  test_connector_commands.py  test_connector_config.py  test_connector_utils.py  test_download.py  test_installer.py  test_login_commands.py  test_mcp_commands.py  test_mcp_server.py  test_org_commands.py  test_register_commands.py  test_shell_utils.py
airbyte_agent_sdk/: __init__.py  ask.py  cli.py  connect.py  connector_model_loader.py  errors.py  exceptions.py  extensions.py  introspection.py  registry.py  types.py  workspace.py
airbyte_agent_sdk/cloud_utils/: client.py
airbyte_agent_sdk/codegen/: filters.py  generator.py
airbyte_agent_sdk/executor/: hosted_executor.py  local_executor.py  models.py
airbyte_agent_sdk/http/: exceptions.py
airbyte_agent_sdk/schema/: base.py  openapi-connector-schema.yaml  operations.py
airbyte_agent_sdk/translation/: _decorator.py  _strategies.py
airbyte_agent_sdk/validation/: cache.py  readiness.py  replication.py
connector_evals/: README.md  __init__.py  cassette_loader.py  conftest.py  evaluators.py  framework.py  pyproject.toml
scripts/: generate_skill_references.py  release_info.py
skill-references/: authentication.md  getting-started.md
tests/: test_generate_skill_references.py
(+865 files in other folders)
