[project]
name = "airbyte-agent-mcp"
version = "0.1.108"
description = "MCP server that exposes Airbyte Connector SDK as MCP tools"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Airbyte Support", email = "support@airbyte.io" }]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.0.0",
    "click>=8.0.0",
    "segment-analytics-python>=2.2.0",
    "jsonref>=1.1.0",
    "jsonpath-ng>=1.6.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "jsonschema>=4.0.0",
    "anthropic>=0.42.0",
    "fastmcp>=3.0.0b1",
    "pydantic-ai-slim[anthropic,fastmcp]>=0.1.0",
    "filetype>=1.2",
    "pytz>=2025.2",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airbyte_agent_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
